Fixed unnecessary transition causing weird dark mode toggling on manage lists

--- a/src/app/app-sections/dashboard/components/manage-list/manage-list.component.scss
+++ b/src/app/app-sections/dashboard/components/manage-list/manage-list.component.scss
@@ -116,7 +116,6 @@
 .data-row {
     padding: 10px 20px;
     border-radius: 5px;
-    transition: all 0.2s ease-in-out;
     background-color: var(--list-item-bkg);
     color: var(--primary);
     cursor: default;
